--- a/nationalflagquiz/style.css
+++ b/nationalflagquiz/style.css
@@ -37,3 +37,27 @@ button {
   color: #e60000;
   margin-bottom: 1rem;
 }
+
+/* モーダル関連 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 2rem;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  border-radius: 10px;
+  text-align: center;
+}
