--- a/nationalflagquiz/style.css
+++ b/nationalflagquiz/style.css
@@ -136,3 +136,14 @@ button:hover {
 #close-modal:hover {
   background-color: #1e8449;
 }
+
+#home-link {
+  display: inline-block;
+  margin-top: 1rem;
+  text-decoration: underline;
+  color: #2c3e50;
+  font-weight: bold;
+}
+#home-link:hover {
+  color: #2980b9;
+}
